<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_hardware</name>
  <version>2.1.1</version>
  <description>
    ROS 2 package for open_manipulator_hardware
  </description>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/timassman/open_manipulator_moveit2</url>
  <url type="bugtracker">https://github.com/timassman/open_manipulator_moveit2/issues</url>
  <author email="thlim@robotis.com">Darby Lim</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>dynamixel_sdk</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>open_manipulator_msgs</depend>
  <depend>open_manipulator_x_libs</depend>
  <depend>robotis_manipulator</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
